Rework of scripts, DoY to support a site directory
Unifies the scripts to all use drill-config.sh. Expands the config
directory concept to include custom code, creating a site directory.
Moves Drill defaults out of drill-env.sh into drill-config.sh. Moves
distribution-specific settings out of drill-env.sh into a new
distrib-env.sh.